trying to fix initial letter on safari

--- a/main/styles.css
+++ b/main/styles.css
@@ -308,6 +308,7 @@ body.home .icon {
 .big-letter::first-letter {
   font-family: "Harry Potter", sans-serif;
   initial-letter: 2;
+  -webkit-initial-letter: 2;
   margin-right: 5px;
 }
 .daily-prophet div:nth-of-type(2) {
